[package]
name = "hex-plotter"
version = "0.1.0"
authors = ["kirfed <kirfed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.2.12"
hex-field = { git = "https://github.com/F3kilo/hex-field.git" }
rand = "0.7.3"
